# todo-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: README.md
.github/workflows/: bump-version.yml  release.yml
scripts/: install-completion-bash.sh  install-completion-zsh.sh  install-completion.ps1  install.ps1  install.sh
src/: main.rs
